# NEO

./: .gitignore  README.md  index.html  pyproject.toml  requirements-pyg.txt  requirements.txt  rsync.sh  run_match_faust.sh  setup_conda.sh  setup_uv.sh
.github/workflows/: pages.yml
exp/conf/: base.yaml  classification.yaml  correspondence.yaml  normal.yaml  optim.yaml  pretrain.yaml  pretrain2.yaml  pretrain_angle.yaml  pretrain_experimental.yaml  pretrain_l2.yaml  pretrain_neurkitt.yaml  pretrain_tet.yaml  segment.yaml  selfsup.yaml  selfsup_experimental.yaml  selfup_rronly.yaml  sft.yaml  shapenetcar.yaml  smpl_deform.yaml
exp/conf/cls_model/: point_transformer.yaml  pointnet2.yaml  transolver2.yaml
exp/conf/corr_model/: point_transformer.yaml  pointnet2.yaml  transolver2.yaml  transolver_experimental.yaml  transolver_next.yaml
exp/conf/datamod/: FAUST_corr.yaml  human_seg.yaml  mix_pretrain.yaml  normal.yaml  objaverse_lowpoly.yaml  objaverse_lowpoly_h5.yaml  partnet_h5.yaml  selfsup.yaml  sft.yaml  shapenet.yaml  shapenet_h5.yaml  shapenetcar.yaml  shrec16_cls.yaml  smplx_deform.yaml
exp/conf/dfm_model/: transolver_exp.yaml
exp/conf/model/: only_pos_embed.yaml  point_transformer.yaml  pointnet2.yaml  transolver.yaml  transolver0.yaml  transolver2.yaml  transolver_experimental-ablation.yaml  transolver_experimental.yaml  transolver_next.yaml
exp/conf/nrm_model/: pointnet2.yaml
exp/conf/seg_model/: point_transformer.yaml  pointnet2.yaml  transolver.yaml
exp/conf/sol_model/: point_transformer.yaml  transolver.yaml  transolver2.yaml  transolver_next.yaml
exp/downstream/: corr_gt.py  correspondence.py  normal.py  preprocess_corr.py  preprocess_human_sig17_seg_benchmark.py  preprocess_normal.py  preprocess_partnet.py  preprocess_shrec16_classification.py  seg.py  seg_to_color_pc.py  shapenetcar.py  shrec16_classification.py  val_seg.py  val_shrec16.py
exp/downstream_deformation/: preprocess_deformation.py  smpl_deform.py  test_smplx_deform.py
exp/launch/: downstream_classification_shrec16.sh  downstream_correspondence.sh  downstream_segment_human.sh  downstream_segment_partnet.py  preprocess-partnet-all.sh  pretrain-base-wh.sh  pretrain-base.sh  pretrain-experimental-base.sh  pretrain-large.sh  selfup2048.sh
exp/pretrain/: get_stats_from_validation.py  infer.py  infer_knn.py  infer_mesh.py  infer_mesh_fastspectrum.py  infer_pcdl.py  infer_pyspectra.py  infer_slepc.py  infer_slepc_cuda.py  plot_stats.py  train.py  train_exp.py  val_distance.py  validate.py
exp/pretrain_datagen/: cvt_h5.py  tet_remeshing.py  visualize_tet_remeshing.py
exp/pretrain_datagen/objaverse/: filter_of.py  filter_opp.py  preprocess.py
exp/pretrain_datagen/objaverse_lowpoly/: find_obj_recursivel.sh  preprocess.py
exp/pretrain_datagen/shapenet/: calc_eigs_dist_shapenet.py  gen.py  preprocess.py
exp/pretrain_datagen/tetmesh/: preprocess.py  visualize.py  visualize_hks.py
exp/pretrain_experimental/: train.py
exp/pretrain_tet/: train.py
exp/selfup/: infer_rronly.py  train.py  train_experimental.py  train_gan.py  train_rronly.py
pyfastspectrum/: .gitignore  .gitmodules  CMakeLists.txt  README.externals.md  demo.py  pyproject.toml
pyfastspectrum/src/: bindings.cpp
pyfastspectrum/tests/: test_compute_eigenpairs.py
pypcdlaplace/: .gitmodules  AGENTS.md  CMakeLists.txt  README.externals.md  README.md  pyproject.toml
pypcdlaplace/pcdlaplace/src/: comp_llpmatrix.cpp  datastructure.h  lpmatrix.cpp  lpmatrix.h  point_cloud.cpp  point_cloud.h
pypcdlaplace/pypcdlaplace/: __init__.py  _api.py  demo.py
pypcdlaplace/src/: pybind_module.cpp
pypcdlaplace/tests/: test_pypcdlaplace.py
pyspec/: CMakeLists.txt  README.externals.md  README.md  pyproject.toml
pyspec/pyspec/: __init__.py
pyspec/script/: demo.py
pyspec/src/: pyspec.cpp
renders/: batch_render.py  batch_render_mesh.py  make_a_row.py  plot_cls_bar.py  plot_compare_model_result.py  plot_heat_time_poisson.py  plot_run_time.py  plot_score_vs_k.py  plot_seg_bar.py  recordings.md  render_biharmonic_geodesic.py  render_fmap.md  render_mesh_once.py  render_once.py  render_ply_v2.py
renders/teaser/: extract_some_from_spn.py
scripts/: appl_heat_distance_pcg.md  biharmonic_geodesic.py  calc_smplx_poses_stats.py  compress_png.py  device_monitor.py  device_tester.py  folder_remesh.py  folder_sampling.py  full_stats_accuracy.py  full_stats_efficiency.py  gallery_result_stats.py  geodesic.py  get_infer_stat.py  get_infer_stat_fsp.py  get_stats.py  heat_distance.py  heat_solver.py  make_a_grid.py  matcher.py  matcher_faust.py  multi_non_uniform_sampling.py  multi_sampling.py  plot_ablation.py  prepare_test_basis.py  run_gallery.py  run_gallery_pyspectra.py  sample_points.py  simplify.py  smoothing.py  subdivide_mesh.py
scripts/eig/: bm_lobpcg.py  bm_pyamg.py  compare_laplacian.py  demo.py  demo2d.py  demo_irregular.py  demo_irregular_lightning.py  demo_irregular_lightning_bug.py  demo_plot_ambiguity.py  examine.py  optimized_solver.py  vis_gev_dist.py
scripts/previous_works/corr_diffusion_net/: fmaps_model.py  train.py
scripts/previous_works/smplx_data/: bake_moyo_data.py
src/g2pt/data/: common.py  objaverse_downloader.py  transforms.py
src/g2pt/data/datasets/: merge.py  objaverse_lowpoly.py  objaverse_lowpoly_h5.py  partnet_pc_datamod.py  pretrain_datamod.py  selfsup.py  selfsup_experimental.py  sft.py  shapenet.py  shapenet_h5.py  shapenetcar.py  smplx_deform.py  unified_cls_datamod.py  (+4 more)
src/g2pt/metrics/: __init__.py  cross_entropy.py  koleo.py  l1.py  mse.py  rl1.py  rmse.py  rrmse.py  selfsupervised.py  span.py
src/g2pt/optim/: lr_cosine_decay.py  lr_onecycle.py  lr_wsd.py  muon.py
src/g2pt/training/: classification.py  common.py  correspondence.py  normal.py  pretrain.py  pretrain_exp.py  pretrain_experimental.py  pretrain_tet.py  segment.py  selfsup.py  selfsup_experimental.py  selfsup_gan.py  selfup_rronly.py  shapenetcar.py  smpl_deform.py
src/g2pt/utils/: common.py  correspondence.py  gev.py  mesh_feats.py  ortho_operations.py  rot.py  sparse.py
training_log_downstream/: cls_get_stats.py
(+24 files in other folders)
